--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "Scorebook",
   "version": "0.0.1",
   "description": "Scorebook Manager",
-  "main": "main.js",
   "private": true,
   "scripts": {
     "test": "karma start",
@@ -12,7 +11,6 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
-    "gulp": "^3.9.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -28,12 +26,8 @@
   },
   "dependencies": {
     "lodash": "^3.10.1",
-    "redux": "^3.0.2",
-    "redux-logger": "^2.0.3",
-    "redux-thunk": "^1.0.0",
-    "stone-skin": "^0.5.2",
-    "vue": "^1.0.0-rc.1",
-    "vue-class-component": "^1.0.0",
-    "vue-redux": "0.0.1"
+    "parse": "^1.6.7",
+    "vue": "^1.0.0",
+    "vue-class-component": "^1.0.0"
   }
 }
