--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,40 +16,33 @@
     },
     "filesGlob": [
         "./**/*.ts",
-        "./**/*.tsx",
-        "!./node_modules/typescript/**/*",
-        "!./node_modules/stone-skin/node_modules/idb-wrapper-promisify/idb-wrapper-promisify.d.ts"
+        "./**/*.tsx"
     ],
     "compileOnSave": false,
     "files": [
-        "node_modules/stone-skin/index.d.ts",
-        "src/actions/ActionType.ts",
-        "src/actions/index.ts",
-        "src/actions/song.spec.ts",
-        "src/actions/song.ts",
-        "src/actions/songs.spec.ts",
-        "src/actions/songs.ts",
+        "node_modules/typescript/lib/lib.core.d.ts",
+        "node_modules/typescript/lib/lib.core.es6.d.ts",
+        "node_modules/typescript/lib/lib.d.ts",
+        "node_modules/typescript/lib/lib.dom.d.ts",
+        "node_modules/typescript/lib/lib.es6.d.ts",
+        "node_modules/typescript/lib/lib.scriptHost.d.ts",
+        "node_modules/typescript/lib/lib.webworker.d.ts",
+        "node_modules/typescript/lib/typescript.d.ts",
+        "node_modules/typescript/lib/typescriptServices.d.ts",
         "src/app.ts",
-        "src/components/decorators/decorators.spec.ts",
-        "src/components/decorators/decorators.ts",
+        "src/decorators/decorators.spec.ts",
+        "src/decorators/decorators.ts",
         "src/models/song.spec.ts",
         "src/models/song.ts",
-        "src/reducers/index.ts",
-        "src/reducers/song.ts",
-        "src/reducers/songs.ts",
-        "src/states/songs.ts",
-        "src/stores/configureStore.ts",
         "typings/bundle.d.ts",
         "typings/chai/chai.d.ts",
-        "typings/es6-promise/es6-promise.d.ts",
-        "typings/github-electron/github-electron-main.d.ts",
-        "typings/github-electron/github-electron.d.ts",
+        "typings/jquery/jquery.d.ts",
         "typings/lodash/lodash.d.ts",
         "typings/mocha/mocha.d.ts",
         "typings/node/node.d.ts",
-        "typings/redux-thunk/redux-thunk.d.ts",
-        "typings/redux/redux.d.ts",
+        "typings/parse/parse.d.ts",
         "typings/sinon/sinon.d.ts",
+        "typings/underscore/underscore.d.ts",
         "typings/vue/vue.d.ts"
     ],
     "exclude": []
