--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,28 +16,21 @@
     },
     "filesGlob": [
         "./**/*.ts",
-        "./**/*.tsx"
+        "./**/*.tsx",
+        "!./node_modules/typescript/**/*.ts"
     ],
     "compileOnSave": false,
     "files": [
-        "node_modules/typescript/lib/lib.core.d.ts",
-        "node_modules/typescript/lib/lib.core.es6.d.ts",
-        "node_modules/typescript/lib/lib.d.ts",
-        "node_modules/typescript/lib/lib.dom.d.ts",
-        "node_modules/typescript/lib/lib.es6.d.ts",
-        "node_modules/typescript/lib/lib.scriptHost.d.ts",
-        "node_modules/typescript/lib/lib.webworker.d.ts",
-        "node_modules/typescript/lib/typescript.d.ts",
-        "node_modules/typescript/lib/typescriptServices.d.ts",
         "src/app.ts",
         "src/decorators/decorators.spec.ts",
         "src/decorators/decorators.ts",
         "src/models/song.spec.ts",
         "src/models/song.ts",
+        "src/typings/env.d.ts",
+        "src/typings/vue-class-component.d.ts",
         "typings/bundle.d.ts",
         "typings/chai/chai.d.ts",
         "typings/jquery/jquery.d.ts",
-        "typings/lodash/lodash.d.ts",
         "typings/mocha/mocha.d.ts",
         "typings/node/node.d.ts",
         "typings/parse/parse.d.ts",
