--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Scorebook Manager",
   "private": true,
   "scripts": {
-    "test": "karma start",
-    "copy": "gulp copy"
+    "test": "karma start"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
+    "dotenv": "^1.2.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -25,8 +25,8 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
     "parse": "^1.6.7",
+    "underscore": "^1.8.3",
     "vue": "^1.0.0",
     "vue-class-component": "^1.0.0"
   }
