--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,13 @@
         "src/decorators/decorators.ts",
         "src/models/song.spec.ts",
         "src/models/song.ts",
+        "src/route-config.ts",
         "src/typings/env.d.ts",
         "src/typings/vue-class-component.d.ts",
+        "src/typings/vue-router.d.ts",
         "typings/bundle.d.ts",
         "typings/chai/chai.d.ts",
+        "typings/es6-promise/es6-promise.d.ts",
         "typings/jquery/jquery.d.ts",
         "typings/mocha/mocha.d.ts",
         "typings/node/node.d.ts",
