--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "compileOnSave": false,
     "files": [
         "src/app.ts",
+        "src/components/navbar/navbar.ts",
         "src/decorators/decorators.spec.ts",
         "src/decorators/decorators.ts",
         "src/models/song.spec.ts",
