曲の登録画面を作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
         "src/components/album/album.ts",
         "src/components/albums/albums.ts",
         "src/components/albums/pagination.ts",
+        "src/components/create/create.ts",
         "src/components/navbar/navbar.ts",
+        "src/constants/constants.ts",
         "src/decorators/decorators.spec.ts",
         "src/decorators/decorators.ts",
         "src/index.ts",
@@ -35,6 +37,7 @@
         "src/typings/env.d.ts",
         "src/typings/vue-class-component.d.ts",
         "src/typings/vue-router.d.ts",
+        "src/typings/vue.d.ts",
         "typings/bundle.d.ts",
         "typings/chai/chai.d.ts",
         "typings/es6-promise/es6-promise.d.ts",
