--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,33 +21,36 @@
     ],
     "compileOnSave": false,
     "files": [
-        "src/app.ts",
-        "src/components/album/album.ts",
-        "src/components/albums/albums.ts",
-        "src/components/albums/pagination.ts",
-        "src/components/create/create.ts",
-        "src/components/navbar/navbar.ts",
-        "src/constants/constants.ts",
-        "src/decorators/decorators.spec.ts",
-        "src/decorators/decorators.ts",
-        "src/index.ts",
-        "src/models/song.spec.ts",
-        "src/models/song.ts",
-        "src/route-config.ts",
-        "src/typings/env.d.ts",
-        "src/typings/vue-class-component.d.ts",
-        "src/typings/vue-router.d.ts",
-        "src/typings/vue.d.ts",
-        "typings/bundle.d.ts",
-        "typings/chai/chai.d.ts",
-        "typings/es6-promise/es6-promise.d.ts",
-        "typings/jquery/jquery.d.ts",
-        "typings/mocha/mocha.d.ts",
-        "typings/node/node.d.ts",
-        "typings/parse/parse.d.ts",
-        "typings/sinon/sinon.d.ts",
-        "typings/underscore/underscore.d.ts",
-        "typings/vue/vue.d.ts"
+        "./src/app.ts",
+        "./src/components/album/album.ts",
+        "./src/components/albums/albums.ts",
+        "./src/components/albums/pagination.ts",
+        "./src/components/create/create.ts",
+        "./src/components/navbar/navbar.ts",
+        "./src/constants/constants.ts",
+        "./src/decorators/decorators.spec.ts",
+        "./src/decorators/decorators.ts",
+        "./src/index.ts",
+        "./src/models/song.spec.ts",
+        "./src/models/song.ts",
+        "./src/objects/part.ts",
+        "./src/objects/song.ts",
+        "./src/objects/video.ts",
+        "./src/route-config.ts",
+        "./src/typings/env.d.ts",
+        "./src/typings/vue-class-component.d.ts",
+        "./src/typings/vue-router.d.ts",
+        "./src/typings/vue.d.ts",
+        "./typings/bundle.d.ts",
+        "./typings/chai/chai.d.ts",
+        "./typings/es6-promise/es6-promise.d.ts",
+        "./typings/jquery/jquery.d.ts",
+        "./typings/mocha/mocha.d.ts",
+        "./typings/node/node.d.ts",
+        "./typings/parse/parse.d.ts",
+        "./typings/sinon/sinon.d.ts",
+        "./typings/underscore/underscore.d.ts",
+        "./typings/vue/vue.d.ts"
     ],
     "exclude": []
 }
