曲の画面を作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,12 +27,12 @@
         "./src/components/albums/pagination.ts",
         "./src/components/create/create.ts",
         "./src/components/navbar/navbar.ts",
+        "./src/components/song/song.ts",
         "./src/constants/constants.ts",
+        "./src/data/song.ts",
         "./src/decorators/decorators.spec.ts",
         "./src/decorators/decorators.ts",
         "./src/index.ts",
-        "./src/models/song.spec.ts",
-        "./src/models/song.ts",
         "./src/objects/part.ts",
         "./src/objects/song.ts",
         "./src/objects/video.ts",
@@ -49,6 +49,7 @@
         "./typings/node/node.d.ts",
         "./typings/parse/parse.d.ts",
         "./typings/sinon/sinon.d.ts",
+        "./typings/twitter/twitter.d.ts",
         "./typings/underscore/underscore.d.ts",
         "./typings/vue/vue.d.ts"
     ],
