デコレーターを更新

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,9 @@
         "./src/components/navbar/navbar.ts",
         "./src/components/song/song.ts",
         "./src/constants/constants.ts",
+        "./src/data/part.ts",
         "./src/data/song.ts",
+        "./src/data/video.ts",
         "./src/decorators/decorators.spec.ts",
         "./src/decorators/decorators.ts",
         "./src/index.ts",
