編集画面とそのロジックを作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
         "./src/components/albums/albums.ts",
         "./src/components/albums/pagination.ts",
         "./src/components/create/create.ts",
+        "./src/components/edit/edit.ts",
         "./src/components/navbar/navbar.ts",
         "./src/components/song/song.ts",
         "./src/constants/constants.ts",
@@ -38,6 +39,7 @@
         "./src/objects/part.ts",
         "./src/objects/song.ts",
         "./src/objects/video.ts",
+        "./src/partials/form/song.ts",
         "./src/route-config.ts",
         "./src/typings/env.d.ts",
         "./src/typings/vue-class-component.d.ts",
