曲の編集画面のファイルを分割

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
         "./src/components/navbar/navbar.ts",
         "./src/components/song/create/create.ts",
         "./src/components/song/edit/edit.ts",
+        "./src/components/song/form/parts.ts",
         "./src/components/song/form/song.ts",
+        "./src/components/song/form/videos.ts",
         "./src/components/song/song.ts",
         "./src/components/songs/songs.ts",
         "./src/constants/constants.ts",
