--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mocha": "^2.3.3",
     "sinon": "^1.17.1",
     "ts-loader": "^0.7.2",
+    "tslint": "^3.2.0",
     "typescript": "^1.7.3",
     "webpack": "^1.12.9"
   },
