vue-property-decoratorを導入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,59 +12,14 @@
         "removeComments": false,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "rootDir": "src",
+        "outDir": "dist"
     },
-    "filesGlob": [
-        "./**/*.ts",
-        "./**/*.d.ts",
-        "./**/*.tsx",
-        "!./node_modules/typescript/**/*.ts"
-    ],
     "compileOnSave": false,
-    "files": [
-        "./src/app.ts",
-        "./src/components/album/album.ts",
-        "./src/components/albums/albums.ts",
-        "./src/components/albums/pagination.ts",
-        "./src/components/login/login.ts",
-        "./src/components/logout/logout.ts",
-        "./src/components/navbar/navbar.ts",
-        "./src/components/register/register.ts",
-        "./src/components/song/create/create.ts",
-        "./src/components/song/edit/edit.ts",
-        "./src/components/song/form/parts.ts",
-        "./src/components/song/form/song.ts",
-        "./src/components/song/form/videos.ts",
-        "./src/components/song/song.ts",
-        "./src/components/songs/songs.ts",
-        "./src/constants/constants.ts",
-        "./src/data/part.ts",
-        "./src/data/song.ts",
-        "./src/data/video.ts",
-        "./src/decorators/decorators.spec.ts",
-        "./src/decorators/decorators.ts",
-        "./src/index.ts",
-        "./src/objects/part.ts",
-        "./src/objects/song.ts",
-        "./src/objects/video.ts",
-        "./src/route-config.ts",
-        "./src/typings/custom.d.ts",
-        "./src/typings/env.d.ts",
-        "./src/typings/vue-class-component.d.ts",
-        "./src/typings/vue-router.d.ts",
-        "./src/typings/vue.d.ts",
-        "./typings/bundle.d.ts",
-        "./typings/chai/chai.d.ts",
-        "./typings/es6-promise/es6-promise.d.ts",
-        "./typings/jquery/jquery.d.ts",
-        "./typings/mocha/mocha.d.ts",
-        "./typings/node/node.d.ts",
-        "./typings/parse/parse.d.ts",
-        "./typings/sinon/sinon.d.ts",
-        "./typings/twitter/twitter.d.ts",
-        "./typings/underscore/underscore.d.ts"
+    "exclude": [
+        "node_modules"
     ],
-    "exclude": [],
     "atom": {
         "rewriteTsconfig": true
     }
