--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "parse": "^1.6.9",
     "vue": "^1.0.11",
     "vue-class-component": "^2.0.0",
+    "vue-property-decorator": "^2.0.0",
     "vue-router": "^0.7.7"
   }
 }
