--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,13 @@
 root = true
-[{src,scripts}/**.{ts}]
+[*]
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
+
+[*.ts]
 indent_size = 4
+
+[*.{html, scss}]
+indent_size = 2
