--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue": "^1.0.15",
     "vue-class-component": "^2.0.1",
     "vue-property-decorator": "^2.1.0",
-    "vue-router": "^0.7.10"
+    "vue-router": "^0.7.10",
+    "vuex": "^0.2.0"
   }
 }
