--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "private": true,
   "scripts": {
     "test": "karma start",
-    "build:js": "webpack",
-    "build:css": "node-sass --include-path node_modules/foundation-sites/scss src/style.scss --output ./public --output-style expanded"
+    "build": "webpack"
   },
+  "main": "main.js",
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
+    "css-loader": "^0.23.1",
     "dotenv": "^1.2.0",
+    "electron-packager": "^5.2.1",
+    "file-loader": "^0.8.5",
     "html-loader": "^0.4.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
@@ -23,10 +26,13 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
     "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
     "sinon": "^1.17.1",
+    "style-loader": "^0.13.0",
     "ts-loader": "^0.8.0",
     "tslint": "^3.2.0",
     "typescript": "^1.8.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9"
   },
   "dependencies": {
