--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
   },
   "dependencies": {
     "foundation-sites": "^6.1.2",
-    "vue": "^1.0.17",
+    "vue": "^1.0.19",
     "vue-class-component": "^3.2.0",
     "vue-router": "^0.7.11",
-    "vuex": "^0.2.0"
+    "vuex": "^0.6.2",
+    "vuex-router-sync": "^1.0.0"
   }
 }
