--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     },
     "compileOnSave": false,
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "typings/browser",
+        "typings/browser.d.ts"
     ],
     "atom": {
         "rewriteTsconfig": false
